<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".auth.ui.ForgetPasswordActivity">
    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.1"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_email"
        app:layout_constraintTop_toBottomOf="@+id/space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.28" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:text="@string/password_get_back"
        android:textColor="@color/color_text_functional"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintWidth_percent="0.30" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_background"
        android:gravity="center"
        android:hint="@string/email_input"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/color_text_secondary"
        android:textColor="@color/color_text_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent="0.8" />

    <FrameLayout
        android:id="@+id/line1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent="0.8">
        <EditText
            android:id="@+id/captcha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_background"
            android:gravity="center"
            android:hint="@string/check_input"
            android:singleLine="true"
            android:maxLength="4"
            android:inputType="number"
            android:textColor="@color/color_text_primary"
            android:textColorHint="@color/color_text_secondary"/>
        <TextView
            android:id="@+id/get_captcha"
            android:layout_width="100dp"
            android:layout_gravity="end"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/need_check"
            android:textColor="@color/color_text_functional"
            android:layout_height="match_parent"/>
    </FrameLayout>

    <EditText
        android:id="@+id/new_password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_background"
        android:gravity="center"
        android:hint="@string/password_input"
        android:singleLine="true"
        android:inputType="textPassword|textVisiblePassword"
        android:textColorHint="@color/color_text_secondary"
        android:textColor="@color/color_text_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_background"
        android:gravity="center"
        android:hint="@string/password_confirm"
        android:singleLine="true"
        android:inputType="textPassword|textVisiblePassword"
        android:textColorHint="@color/color_text_secondary"
        android:textColor="@color/color_text_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_password"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent="0.8" />


    <!-- 密码要求提示 -->
    <LinearLayout
        android:id="@+id/passwordRequirements"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password">

        <!-- 长度要求 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/lengthIcon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_deny"
                android:tint = "@color/color_base_red"/>

            <TextView
                android:id="@+id/lengthHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/password_length_restriction"
                android:textColor="@color/color_text_highlight"
                android:textSize="12sp" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/change_password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_enable_button"
        android:gravity="center"
        android:text="@string/password_change"
        android:textColor="@color/color_base_white"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRequirements"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintWidth_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>